tests/NormalTests/paczka1/fuzzy1/52854787.err
Error in line 10: 3R9 A550 86,09
Error in line 5: A550 A744 94,6
Error in line 15: fp16qkD9Ts 744 49,2
Error in line 18: fp16qkD9Ts A744 219,9
Error in line 24: 3R9 A441 86,5
Error in line 30: vww4V6xb A441 51,3
Error in line 27: 3R9 A550 77,9
